--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -30,9 +30,9 @@
         />
 
     <TextView
+        android:id="@+id/numSteps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/steps"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="220dp"
         />
