--- a/app/src/main/res/layout/map_fragment.xml
+++ b/app/src/main/res/layout/map_fragment.xml
@@ -9,16 +9,25 @@
     <com.google.android.gms.maps.MapView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/map"/>
+        android:id="@+id/map"
+        tools:context="com.example.mapwithmarker.MapsMarkerActivity"/>
     
-    <ImageView
+    <ImageButton
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/newPlace"
+        android:id="@+id/addNewPlace"
         android:layout_marginStart="10dp"
         android:layout_marginTop="15dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/ic_baseline_add_24"/>
+        android:src="@drawable/ic_baseline_add_24"
+        android:contentDescription="Add" />
+
+    <EditText
+        android:layout_width="267dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="90dp"
+        android:layout_marginTop="15dp"
+        android:id="@+id/addTitle"/>
 
 
 </FrameLayout>
