--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -12,13 +12,24 @@
 
         <item
             android:id="@+id/nav_map"
-            android:icon="@drawable/ic_baseline_map_24"
+            android:icon="@drawable/ic_baseline_add_location_24"
             android:title="@string/set_locations" />
+
+        <item
+            android:id="@+id/nav_listloc"
+            android:icon="@drawable/ic_baseline_edit_location_24"
+            android:title="@string/change_locations"/>
 
         <item
             android:id="@+id/nav_steps"
             android:icon="@drawable/ic_baseline_directions_walk_24"
             android:title="@string/history" />
+
+
+        <item
+            android:id="@+id/nav_setting"
+            android:icon="@drawable/ic_baseline_settings_24"
+            android:title="@string/settings"/>
 
 
 
