Mood popup and updater. Geofence code reverted due to errors.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#007FEE</color>
+    <color name="colorPrimaryDark">#180447</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="green">#24A629</color>
+    <color name="orange">#E89300</color>
+    <color name="grey">#9E9A9A</color>
+    <color name="white">#FFFFFF</color>
+    <color name="red">#ED291A</color>
+    <color name="lime">#97E86A</color>
 </resources>
