--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -53,6 +53,15 @@
         android:layout_marginTop="420dp"
         />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:text="@string/how_are_you_today"
+        android:id="@+id/set_mood"/>
+
+
 
 
 
