--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -40,6 +40,27 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/shakes_today"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="250dp"
+        />
+
+    <TextView
+        android:id="@+id/numShake"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="270dp"
+        />
+
+
+
+
+
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="@string/screen_on_time"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="400dp"
