--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -16,9 +16,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/Current_Mood_Prediction"
         android:layout_marginTop="60dp"
         android:layout_gravity="center_horizontal"
+        android:id="@+id/TextMoodPredict"
         />
 
     <TextView
@@ -72,6 +72,7 @@
         android:text="@string/screenTime"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="420dp"
+        android:id="@+id/numScreenOnTime"
         />
 
     <Button
@@ -81,6 +82,22 @@
         android:layout_marginTop="200dp"
         android:text="@string/how_are_you_today"
         android:id="@+id/set_mood"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="250dp"
+        android:text="@string/refresh"
+        android:id="@+id/refresh"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="-200dp"
+        android:text="Predict Mood"
+        android:id="@+id/buttonPredictMood"/>
 
 
 
