--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -10,13 +10,17 @@
         android:layout_height="wrap_content"
         android:text="@string/Current_Mood"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="60dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
         android:layout_gravity="center_horizontal"
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="80dp"
+        android:textSize="20sp"
         android:layout_gravity="center_horizontal"
         android:id="@+id/TextMoodPredict"
         />
@@ -26,6 +30,7 @@
         android:layout_height="wrap_content"
         android:text="@string/steps_today"
         android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="100dp"
         android:layout_marginTop="200dp"
         />
 
@@ -34,7 +39,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="220dp"
+        android:layout_marginTop="200dp"
+        android:layout_marginEnd="-100dp"
         />
 
     <TextView
@@ -42,6 +48,7 @@
         android:layout_height="wrap_content"
         android:text="@string/shakes_today"
         android:layout_gravity="center_horizontal"
+        android:layout_marginEnd="100dp"
         android:layout_marginTop="250dp"
         />
 
@@ -50,11 +57,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="250dp"
+        android:layout_marginEnd="-100dp"
         />
-
-
-
 
 
 
@@ -95,7 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="-200dp"
+        android:layout_marginTop="300dp"
         android:text="Predict Mood"
         android:id="@+id/buttonPredictMood"/>
 
