--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -53,6 +53,24 @@
         android:text="Remove 1000 Shakes"
         android:id="@+id/DEBUG_removeShakes"/>
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:layout_marginLeft="100dp"
+        android:text="Add 1 Hour"
+        android:id="@+id/DEBUG_addHour"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="200dp"
+        android:layout_marginRight="100dp"
+        android:text="Remove 1 Hour"
+        android:id="@+id/DEBUG_removeHour"/>
+
 
 
 
