--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/card_view"
 
     <TextView
         android:id="@+id/moodpredictTitle"
@@ -68,17 +73,22 @@
         android:layout_height="wrap_content"
         android:text="@string/screen_on_time"
         android:layout_gravity="center_horizontal"
+        android:textSize="20sp"
+        android:layout_marginEnd="75dp"
         android:layout_marginTop="400dp"
         />
 
-    <TextView
+
+    <Chronometer
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/screenTime"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="420dp"
-        android:id="@+id/numScreenOnTime"
+        android:textSize="20sp"
+        android:layout_gravity="center"
+        android:layout_marginEnd="-75dp"
+        android:layout_marginTop="90dp"
+        android:id="@+id/timer"
         />
+
 
     <Button
         android:layout_width="wrap_content"
@@ -103,6 +113,13 @@
         android:layout_marginTop="300dp"
         android:text="Predict Mood"
         android:id="@+id/buttonPredictMood"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navi_home"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:menu="@menu/home_navi" />
 
 
 
