--- a/app/src/main/res/layout/moodpopup.xml
+++ b/app/src/main/res/layout/moodpopup.xml
@@ -3,7 +3,7 @@
     android:layout_width="350dp"
     android:layout_height="475dp"
     android:orientation="vertical"
-    android:background="@color/colorPrimaryDark"
+    android:background="@drawable/rounded_dark"
     android:padding="5dp"
     android:layout_gravity="center">
 
