--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#007FEE</color>
-    <color name="colorPrimaryDark">#180447</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#2866c9</color>
+    <color name="colorPrimaryDark">#032459</color>
+    <color name="colorAccent">#2866c9</color>
     <color name="green">#24A629</color>
     <color name="orange">#E89300</color>
     <color name="grey">#9E9A9A</color>
