--- a/app/src/main/res/layout/location_rating_layout.xml
+++ b/app/src/main/res/layout/location_rating_layout.xml
@@ -10,29 +10,22 @@
         android:layout_marginTop="25dp"/>
 
     <Button
+        android:id="@+id/ButtonPrev"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginEnd="70dp"
         android:layout_marginTop="200dp"
-        android:layout_marginEnd="100dp"
-        android:text="Step History"
-        android:id="@+id/ButtonStepsHistory"/>
+        android:background="@drawable/ic_baseline_arrow_back_ios_24" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="200dp"
-        android:layout_marginEnd="-100dp"
-        android:text="Shake History"
-        android:id="@+id/ButtonShakeHistory"/>
+        android:layout_marginEnd="-70dp"
+        android:background="@drawable/ic_baseline_arrow_forward_ios_24"
+        android:id="@+id/ButtonNext"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="250dp"
-        android:text="Mood History"
-        android:id="@+id/ButtonMoodHistory"/>
 
 </FrameLayout>
