--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -25,6 +25,11 @@
             android:icon="@drawable/ic_baseline_directions_walk_24"
             android:title="@string/history" />
 
+        <item
+            android:id="@+id/nav_loc"
+            android:icon="@drawable/ic_baseline_my_location_24"
+            android:title="@string/location_history"/>
+
 
         <item
             android:id="@+id/nav_setting"
